--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "styled-components": "^5.2.0",
